--- a/src/app/reservation/reservation.component.scss
+++ b/src/app/reservation/reservation.component.scss
@@ -128,7 +128,7 @@ table{
       tr{
         td{
           &.hour{
-            font-size: 1.7em;
+            font-size: .7em;
             span{
               transform:translateY(16px)rotate(270deg);
               -webkit-transform:translateY(16px)rotate(270deg);
