--- a/src/app/reservation/reservation.component.html
+++ b/src/app/reservation/reservation.component.html
@@ -5,7 +5,7 @@
       Nos tarifs :
       Séance d’une heure classique 30 euros.
       Séance personnalisée 45 euros. Vous pourrez préciser lors de la réservation d’un créneau libre que vous le voulez non partagé.
-      Demi journée 75 euros (4h à 25 euros dont une offerte).
+      Demi journée 75 euros (4h à 25 euros dont une offerte). Demi journée individuelle 130 euros.
     </div>
   </div>
 </div>
