--- a/src/app/formulaire/formulaire.component.scss
+++ b/src/app/formulaire/formulaire.component.scss
@@ -1,4 +1,18 @@
+@import "/~src/assets/style/colors";
+
 .title-radio {
   display: flex;
   flex-direction: column;
+}
+
+mat-checkbox {
+  font-size: 15px;
+}
+
+mat-error {
+  font-size: 15px;
+}
+
+mat-card {
+  color: $peche-foncee;
 }
