--- a/src/assets/style/_colors.scss
+++ b/src/assets/style/_colors.scss
@@ -6,3 +6,11 @@ $turquoise: rgba(178, 222, 214, 1);
 $turquoise-foncee: #409C8C;
 
 $marron: #4D2005;
+
+/* calendar */
+$blue: #626E7E;
+$light: lighten($blue, 40%);
+
+$full-color: #e53935;
+$empty-color: #43a047;
+$half-color: #ff9800;
