--- a/src/app/formulaire/formulaire.component.html
+++ b/src/app/formulaire/formulaire.component.html
@@ -148,6 +148,8 @@
           </div>
         </div>
 
+        <mat-error *ngIf="submitted && !formulaire.valid" class="text-center">Il y a des erreurs dans le formulaire, veuillez corriger votre saisie.</mat-error>
+
         <div class="row justify-content-center mt-2">
           <button type="button" color="primary" mat-raised-button (click)="dialogRef.close(false)">Annuler</button>
           <button type="submit" color="primary" mat-raised-button (click)="submitted = true;" class="ml-1">Confirmer
