--- a/src/app/reservation/reservation.component.html
+++ b/src/app/reservation/reservation.component.html
@@ -40,8 +40,9 @@
 </table>
 
 <div class="row justify-content-start legende">
-  <div class="col-1 empty-color">Libre</div>
-  <div class="col-1 half-color">Partagée</div>
-  <div class="col-1 full-color">Complète</div>
-  <div class="col-1 closed-color">Fermé</div>
+  <div class="col-2 empty-color">2/2 libres</div>
+  <div class="col-2 half-hour-color">1/2 libre horaire</div>
+  <div class="col-2 half-day-color">1/2 libre demi-journée</div>
+  <div class="col-2 full-color">Complet</div>
+  <div class="col-2 closed-color">Fermé</div>
 </div>
