--- a/src/assets/style/_colors.scss
+++ b/src/assets/style/_colors.scss
@@ -13,4 +13,5 @@ $light: lighten($blue, 40%);
 
 $full-color: #e53935;
 $empty-color: #43a047;
-$half-color: #ff9800;
+$half-hour-color: #ff9800;
+$half-day-color: #81d4fa;
