textes sites + couleurs calendrier

--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -12,7 +12,7 @@
       </div>
       <div class="jumbo-body">
         <div class="color-turquoise-foncee text-center">
-          <div>Séréni'chat est un lieu dédié à l'aide aux enfants neuro-atypiques ou handicapés moteurs par le contact
+          <div>Séréni'chat est un lieu dédié à l'assistance aux enfants handicapés par le contact
             avec l'animal. Notre local comporte également une salle multi-sensorielle.
           </div>
           <div>Nous recueillons des chats et lapins en attente d'adoption, et ouvrons nos portes aux enfants en
@@ -23,6 +23,30 @@
     </div>
   </div>
   <div class="col">
+    <div class="jumbo">
+      <div class="jumbo-title">
+        Séréni'Chat s'adresse aux :
+      </div>
+      <div class="jumbo-body">
+        <ul class="color-turquoise-foncee">
+          <li>Enfants neuro-atypiques</li>
+          <li>Enfants handicapés moteurs</li>
+          <li>Enfants souffrant d'anxiété</li>
+          <li>Associations TSA/trisomie/TED</li>
+          <li>Classes ULIS</li>
+          <li>Hôpitaux de jour pédiatriques</li>
+          <li>MDPH</li>
+        </ul>
+        <div class="color-peche-foncee text-center mt-3">
+          Vous voulez réserver pour une personne non citée ci-dessus ? <span class="typo-link" routerLink="/contact">Contactez-nous !</span></div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="row mt-5 justify-content-center">
+  <div class="col-11">
+    <img src="../../assets/images/free-cat-clipart-silhouette-vector-images.png" alt="cat logo" class="logo-cat">
     <div class="jumbo">
       <div class="jumbo-title">
         Qui gère Séréni'chat ?
@@ -41,30 +65,6 @@
             </div>
           </div>
         </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="row mt-5 justify-content-center">
-  <div class="col-11">
-    <img src="../../assets/images/free-cat-clipart-silhouette-vector-images.png" alt="cat logo" class="logo-cat">
-    <div class="jumbo">
-      <div class="jumbo-title">
-        Séréni'Chat s'adresse aux :
-      </div>
-      <div class="jumbo-body">
-        <ul class="color-turquoise-foncee">
-          <li>Enfants neuro-atypiques</li>
-          <li>Enfants handicapés moteurs</li>
-          <li>Enfants souffrant d'anxiété</li>
-          <li>Associations TSA/trisomie/TED...</li>
-          <li>Classes ULIS (maximum 2 enfants par séance)</li>
-          <li>Hôpitaux de jour pédiatriques</li>
-          <li>MDPH</li>
-        </ul>
-        <div class="color-peche-foncee text-center mt-3">
-          Et bien d'autres encore, <span class="typo-link" routerLink="/contact">contactez-nous !</span></div>
       </div>
     </div>
   </div>
