--- a/src/app/formulaire/formulaire.component.html
+++ b/src/app/formulaire/formulaire.component.html
@@ -113,7 +113,7 @@
         <div class="row justify-content-center">
           <mat-card class="col-10 mb-3 text-center">
             <p>{{ getPrice() }} euros TTC (règlement sur place)</p>
-            <p>Rappel : la première séance est gratuite !</p>
+            <p>Rappel : la première séance <u>d'une heure</u> est gratuite !</p>
           </mat-card>
         </div>
 
