--- a/src/app/nos-pensionnaires/nos-pensionnaires.component.html
+++ b/src/app/nos-pensionnaires/nos-pensionnaires.component.html
@@ -11,7 +11,9 @@
               Certains ont du mal à trouver des adoptants notamment parce qu'ils sont trop discrets, différents ou trop
               âgés. N'hésitez pas à faire leur connaissance !
             </div>
-            <div class="color-peche-foncee mb-3">Nos associations partenaires pour les chats : Association Alerte SOS, les Copains d'Akina, Chat d'oc
+            <div class="color-peche-foncee mb-3">
+              <div>Notre association partenaire pour les chats :</div>
+              <div>Les Copains d'Akina</div>
             </div>
           </div>
         </div>
@@ -25,8 +27,8 @@
         <div class="jumbo-body">
           <div class="color-turquoise-foncee text-center">
             <div>Un coup de cœur ? <br>Certains de nos pensionnaires félins sont adoptables !</div>
-            <div>Contactez-nous afin de discuter des conditions d'adoption et être redirigé vers nos associations
-              partenaires.</div>
+            <div>Contactez-nous afin de discuter des conditions d'adoption et être redirigé vers notre association
+              partenaire.</div>
             <div class="color-peche-foncee mt-3 text-left">Important</div>
             <div class="text-left">Comme nous sommes famille d'accueil, nos chats ne sont pas toujours les mêmes ! Nous essayons de mettre à jour notre site régulièrement mais il est possible que nous n'ayons pas encore eu le temps de changer les photos.</div>
             </div>
