--- a/src/app/reservation/reservation.component.html
+++ b/src/app/reservation/reservation.component.html
@@ -1,17 +1,17 @@
 <div class="text-big">
-  <div class="color-turquoise-foncee text-center mt-5">
-    <div>
-      La première séance d’une heure est gratuite.
-      Nos tarifs :
-      Séance d’une heure classique 30 euros.
-      Séance personnalisée 45 euros. Vous pourrez préciser lors de la réservation d’un créneau libre que vous le voulez
-      non partagé.
-      Demi journée 75 euros (4h à 25 euros dont une offerte). Demi journée individuelle 130 euros.
-    </div>
+  <div class="color-peche-foncee text-center mt-5">
+    <div>La première séance <u>d’une heure</u> est gratuite !</div>
+     <div class="color-turquoise-foncee text-left mt-1">
+      <div>Pour les heures suivantes, nos tarifs :</div>
+      <div>- Séance d’une heure classique : 30 euros.</div>
+      <div>- Séance individuelle : 45 euros.</div>
+      <div>- Demi journée classique : 75 euros (4h à 25 euros dont 1h offerte).</div>
+      <div>- Demi journée individuelle 120 euros (4h à 40 euros dont 1h offerte).</div>
+     </div>
   </div>
 </div>
 
-<div class="row justify-content-center">
+<div class="row justify-content-center mt-5">
   <div class="col-1">
     <mat-icon (click)="addDays(-7)">keyboard_arrow_left</mat-icon>
   </div>
@@ -40,9 +40,9 @@
 </table>
 
 <div class="row justify-content-start legende">
-  <div class="col-2 empty-color">2/2 libres</div>
-  <div class="col-2 half-hour-color">1/2 libre horaire</div>
-  <div class="col-2 half-day-color">1/2 libre demi-journée</div>
+  <div class="col-2 empty-color">2/2 places libres</div>
+  <div class="col-2 half-hour-color">1/2 place libre horaire</div>
+  <div class="col-2 half-day-color">1/2 place libre demi-journée</div>
   <div class="col-2 full-color">Complet</div>
   <div class="col-2 closed-color">Fermé</div>
 </div>
