--- a/src/app/nous-aider/nous-aider.component.html
+++ b/src/app/nous-aider/nous-aider.component.html
@@ -1,6 +1,6 @@
 <div class="text-big">
   <div class="color-turquoise-foncee text-center mt-5">
-    <div>Si Séréni'chat est payant, c'est pour nous aider à louer notre local et à fournir nourriture et litière à nos
+    <div>Si Séréni'chat est payant, c'est pour nous aider à louer notre local et à fournir nourriture, litière et soins vétérinaires à nos
       protégés.
     </div>
   </div>
@@ -22,8 +22,8 @@
             <div>- pour les chats : des croquettes pour chats stérilisés, de la litière agglomérante, des petites
               friandises pour chat, des jouets
             </div>
-            <div>-pour les lapins : du foin, de la litière végétale, des légumes frais (carottes, chou de bruxelles,
-              épinard, endives)
+            <div>-pour les lapins : du foin, de la litière végétale, des fruits et légumes frais (carottes, choux de bruxelles,
+              épinards, endives, bananes, pommes), des jouets
             </div>
             <div>- autre chose qui leur ferait plaisir !
             </div>
