--- a/src/assets/style/_colors.scss
+++ b/src/assets/style/_colors.scss
@@ -11,7 +11,7 @@ $marron: #4D2005;
 $blue: #626E7E;
 $light: lighten($blue, 40%);
 
-$full-color: #e53935;
-$empty-color: #43a047;
-$half-hour-color: #ff9800;
+$full-color: #ef9a9a;
+$empty-color: #c5e1a5;
+$half-hour-color: #ffcc80;
 $half-day-color: #81d4fa;
