--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -38,7 +38,7 @@
           <li>MDPH</li>
         </ul>
         <div class="color-peche-foncee text-center mt-3">
-          Vous voulez réserver pour une personne non citée ci-dessus ? <span class="typo-link" routerLink="/contact">Contactez-nous !</span></div>
+          Vous voulez réserver pour une personne non représentée ci-dessus ? <span class="typo-link" routerLink="/contact">Contactez-nous !</span></div>
       </div>
     </div>
   </div>
