--- a/src/app/nos-pensionnaires/nos-pensionnaires.component.html
+++ b/src/app/nos-pensionnaires/nos-pensionnaires.component.html
@@ -38,6 +38,8 @@
     </div>
   </div>
 
-<div class="row text-center mt-3">
-  <img class="img-rounded-corners cat" src="../../assets/images/Priam.jpg" alt="cats">
-</div>
+  <div class="row text-center pb-5 justify-content-center mt-5">
+    <div class="col"><img class="img-rounded-corners local2" src="../../assets/images/LuluTokyotxt.png" alt="lapines"></div>
+    <div class="col"><img class="img-rounded-corners local2" src="../../assets/images/tripléstxt.jpg" alt="triplés"></div>
+    <div class="col"><img class="img-rounded-corners local2" src="../../assets/images/axotxt.jpg" alt="axos"></div>
+  </div>
