--- a/src/app/nos-locaux/nos-locaux.component.html
+++ b/src/app/nos-locaux/nos-locaux.component.html
@@ -17,7 +17,11 @@
   <div>
       <div class="row text-center pb-5 justify-content-center mt-5">
         <div class="col"><img class="img-rounded-corners local2" src="../../assets/images/local.jpg" alt="local"></div>
-        <div class="col"><img class="img-rounded-corners local2" src="../../assets/images/local.jpg" alt="local"></div>
+        <div class="col"><img class="img-rounded-corners local2" src="../../assets/images/Branzoé.jpg" alt="local"></div>
+        <div class="col"><img class="img-rounded-corners local2" src="../../assets/images/LuluTokyo2.png" alt="local"></div>
+        <div class="col"><img class="img-rounded-corners local2" src="../../assets/images/LuluTokyo3.png" alt="local"></div>
+        <div class="col"><img class="img-rounded-corners local2" src="../../assets/images/triplés2.jpg" alt="local"></div>
+        <div class="col"><img class="img-rounded-corners local2" src="../../assets/images/salletente.jpg" alt="local"></div>
       </div>
   </div>
 </div>
