--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -1,7 +1,7 @@
 <div>
 
   <div class="row text-center pb-5 justify-content-center mt-5">
-    <img class="img-rounded-corners local" src="../../assets/images/local.jpg" alt="local">
+    <img class="img-rounded-corners local" src="../../assets/images/local global.jpg" alt="local">
   </div>
 
 <div class="row">
