--- a/src/app/nos-locaux/nos-locaux.component.html
+++ b/src/app/nos-locaux/nos-locaux.component.html
@@ -6,22 +6,28 @@
     <div>Séréni'chat a fait son nid au 15, Rue Desargues 75011 Paris.</div>
     <div>-Le local est accessible aux personnes à mobilité réduite-</div>
   </div>
-  <div class="color-peche-foncee text-center mt-4">
-    <div>Accès transports en commun</div>
-  </div>
-  <div class="color-turquoise-foncee text-center">
-    <div>En métro : Couronnes (ligne 2) ou Belleville (lignes 2 et 11)</div>
-    <div>En bus : Maison des Metallos (bus 96), Couronnes (bus 96) ou Ramponeau (bus 20 et 71)</div>
-    <div>En voiture : Places pour personnes en situation de handicap à proximité</div>
-  </div>
+
   <div>
       <div class="row text-center pb-5 justify-content-center mt-5">
-        <div class="col"><img class="img-rounded-corners local2" src="../../assets/images/local.jpg" alt="local"></div>
+        <div class="col"><img class="img-rounded-corners local2" src="../../assets/images/local global.jpg" alt="local"></div>
         <div class="col"><img class="img-rounded-corners local2" src="../../assets/images/Branzoé.jpg" alt="local"></div>
         <div class="col"><img class="img-rounded-corners local2" src="../../assets/images/LuluTokyo2.png" alt="local"></div>
         <div class="col"><img class="img-rounded-corners local2" src="../../assets/images/LuluTokyo3.png" alt="local"></div>
         <div class="col"><img class="img-rounded-corners local2" src="../../assets/images/triplés2.jpg" alt="local"></div>
-        <div class="col"><img class="img-rounded-corners local2" src="../../assets/images/salletente.jpg" alt="local"></div>
+        <div class="col"><img class="img-rounded-corners local2" src="../../assets/images/axo.jpg" alt="local"></div>
+        <div class="col"><img class="img-rounded-corners local2" src="../../assets/images/salle 1.jpg" alt="local"></div>
+        <div class="col"><img class="img-rounded-corners local2" src="../../assets/images/salle2.jpg" alt="local"></div>
       </div>
   </div>
+</div>
+
+<div class="text-big">
+<div class="color-peche-foncee text-center">
+  <div>Accès transports en commun</div>
+</div>
+<div class="color-turquoise-foncee text-center">
+  <div>En métro : Couronnes (ligne 2) ou Belleville (lignes 2 et 11)</div>
+  <div>En bus : Maison des Metallos (bus 96), Couronnes (bus 96) ou Ramponeau (bus 20 et 71)</div>
+  <div>En voiture : Places pour personnes en situation de handicap à proximité</div>
+</div>
 </div>
