--- a/src/app/nos-pensionnaires/nos-pensionnaires.component.html
+++ b/src/app/nos-pensionnaires/nos-pensionnaires.component.html
@@ -29,6 +29,7 @@
             <div>Un coup de cœur ? <br>Certains de nos pensionnaires félins sont adoptables !</div>
             <div>Contactez-nous afin de discuter des conditions d'adoption et être redirigé vers notre association
               partenaire.</div>
+            <div><u>Remarque</u> : Bran, Sansa, Arya, Lulu et Tokyo sont nos résidents permanents. Ils ne sont pas à l'adoption, vous pourrez les voir à chacune de vos visites !</div>
             <div class="color-peche-foncee mt-3 text-left">Important</div>
             <div class="text-left">Comme nous sommes famille d'accueil, nos chats ne sont pas toujours les mêmes ! Nous essayons de mettre à jour notre site régulièrement mais il est possible que nous n'ayons pas encore eu le temps de changer les photos.</div>
             </div>
