--- a/src/app/nos-pensionnaires/nos-pensionnaires.component.html
+++ b/src/app/nos-pensionnaires/nos-pensionnaires.component.html
@@ -42,5 +42,5 @@
   <div class="row text-center pb-5 justify-content-center mt-5">
     <div class="col"><img class="img-rounded-corners local2" src="../../assets/images/LuluTokyotxt.png" alt="lapines"></div>
     <div class="col"><img class="img-rounded-corners local2" src="../../assets/images/tripléstxt.jpg" alt="triplés"></div>
-    <div class="col"><img class="img-rounded-corners local2" src="../../assets/images/axotxt.jpg" alt="axos"></div>
+    <div class="col"><img class="img-rounded-corners local2" src="../../assets/images/3axostxt.png" alt="axos"></div>
   </div>
