--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,12 @@
 <div>
-  <div class="row justify-content-around mh-100">
+  <div class="row justify-content-center mt-3">
     <div class="col text-center">
       <img routerLink="" src="../../assets/images/logo.png" alt="logo" class="logo">
     </div>
+
+  </div>
+
+  <div class="row">
     <div class="col title">
       <h1 routerLink="" class="color-peche text-center text-vbig typo-westhouse">Séréni'chat</h1>
     </div>
