--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -16,10 +16,7 @@ hr {
 }
 
 .logo {
-  @media only screen and (max-width: 600px) {
-    width: 80%;
-  }
-  width: 30%;
+  width: 150px;
   cursor: pointer;
 }
 
