--- a/src/app/nous-aider/nous-aider.component.html
+++ b/src/app/nous-aider/nous-aider.component.html
@@ -22,8 +22,7 @@
             <div>- pour les chats : des croquettes pour chats stérilisés, de la litière agglomérante, des petites
               friandises pour chat, des jouets
             </div>
-            <div>-pour les lapins : du foin, de la litière végétale, des fruits et légumes frais (carottes, choux de bruxelles,
-              épinards, endives, bananes, pommes), des jouets
+            <div>-pour les lapins : du foin, de la litière végétale, des fruits et légumes frais (carottes, épinards, endives, bananes, pommes), des jouets
             </div>
             <div>- autre chose qui leur ferait plaisir !
             </div>
