--- a/src/app/reservation/reservation.component.html
+++ b/src/app/reservation/reservation.component.html
@@ -3,10 +3,10 @@
     <div>La première séance <u>d’une heure</u> est gratuite !</div>
      <div class="color-turquoise-foncee text-left mt-1">
       <div>Pour les heures suivantes, nos tarifs :</div>
-      <div>- Séance d’une heure classique : 30 euros.</div>
+      <div>- Une place en séance d’une heure classique : 30 euros.</div>
       <div>- Séance individuelle : 45 euros.</div>
-      <div>- Demi journée classique : 75 euros (4h à 25 euros dont 1h offerte).</div>
-      <div>- Demi journée individuelle 120 euros (4h à 40 euros dont 1h offerte).</div>
+      <div>- Une place en demi journée classique : 75 euros (4h à 25 euros dont 1h offerte).</div>
+      <div>- Demi journée individuelle : 120 euros (4h à 40 euros dont 1h offerte).</div>
      </div>
   </div>
 </div>
